feat: reactive reservation configuration
Signed-off-by: fredsonchaves07 <fredsonchaves07@gmail.com>